# Fraduino

./: .gitignore
mcu/: .gitignore  Cargo.toml  Makefile  build.rs
mcu/drv/: boot.c
mcu/inc/: ma_main.h  md_led.h
mcu/mcu/: .gitignore  STM32L432KBUx_FLASH.ld  mcu.ioc
mcu/src/: ma_main.c  main.rs  md_led.c
pcb/: .gitignore  fraduino.kicad_pcb  fraduino.kicad_pro  fraduino.kicad_sch  main.kicad_sch
