[package]
edition = "2021"
name = "fraduino"
version = "0.1.0"

[dependencies]


[dev-dependencies]

[build-dependencies]
cc = "1"

[profile.dev]
opt-level = 1
panic = "unwind"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
